<resources>
    <string name="app_name">EASYPEASY</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello">Hello\t There,\nWelcome \tBack</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetPassword">Forget Password ?</string>
    <string name="new_user_signup">New User, You can Sign Up!</string>
    <string name="forget_password">Enter Your Email Address Associated With\nYour Account</string>
    <string name="sign_in">Sign in to continue</string>
    <string name="register">Register</string>
    <string name="create_account">Create an Account,it\'s free</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="backpage">backPage</string>
    <string name="send_password">Send Password</string>
    <string name="verification">Enter Your Mobile Number</string>
    <string name="phone">Phone</string>
    <string name="send_code">We are automatically detecting a SMS\nsend to your mobile number</string>
    <string name="OTP_failure">Don\'t Receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_created">Your Account has been\ncreated.</string>
    <string name="send_confirmation">We Will send you a Confirmation code</string>
    <string name="verify">Verify</string>
    <string name="enter_code">Enter Verification code</string>
    <string name="success_process">Successfully</string>
    <string name="okay">Okay</string>
    <string name="order_summery">Order Summery :</string>
    <string name="subtotal">SubTotal :</string>
    <string name="place_order">Place Order</string>
    <string name="apply">Apply</string>
    <string name="log_out">Log out</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="using">using :</string>
    <string name="pay">Pay</string>
    <string name="card_information">Card information :</string>
    <string name="country_of_region">Country of Region :</string>
    <string name="card_number">Card number</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="profile">profile</string>
    <string name="orders">Orders</string>
    <string name="wallet">Wallet</string>
    <string name="man">man</string>
    <string name="add_to_cart">Add To Cart</string>

</resources>